--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,8 +1,63 @@
-h1{
-    color: red;
-    border: 1px solid green;
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-img{
-    margin: auto 0;
+.topnav {
+    overflow: hidden;
+    background-color: #333;
 }
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  tr:hover {background-color: coral;}
+
+
+  .create-user{
+    padding: 30px;
+    text-align: center;
+  }
+
+  .create-user label{
+    display: block;
+  }
+
+ 
+  .create-user .btn-submit{
+    margin-top: 15px;
+  }
+  .btn-submit{
+    width: 100px;
+    color: #f2f2f2;
+    font-size: 18px;
+    background-color: blue;
+    cursor: pointer;
+  }
