--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,13 +5,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NODE JS BASIC</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <h1>Hello world from ejs</h1>
-    <img src="/image/nodejs.png" alt="">
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+    <div>
+        <table>
+            <h2>List User Table</h2>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% for(let i=0; i < data.length; i++) { %>
+                    <tr>
+                        <td>
+                            <%= data[i].id %>
+                        </td>
+                        <td>
+                            <%= data[i].firstName %>
+                        </td>
+                        <td>
+                            <%= data[i].lastName %>
+                        </td>
+                        <td>
+                            <a href="/detail/user/<%= data[i].id %>">Detail</a>
+
+                            <form action="/edit-user/<%= data[i].id %>" method="GET">
+                                <button type="submit">Edit</button>
+                            </form>
+
+                            <form action="/delete-user" method="post">
+                                <input type="text" hidden value="<%= data[i].id %>" name="userId">
+                                <button type="submit">Delete</button>
+                                <!-- <a href="/delete/user/<%= data[i].id %>">Delete</a> -->
+                            </form>
+                        </td>
+                    </tr>
+                    <% } %>
+            </tbody>
+        </table>
+    </div>
+    <div class="create-user">
+        <div>Create a new user</div>
+        <form action="/create-new-user" method="POST">
+
+            <div>
+                <label for="">First name:</label>
+                <input type="text" name="firstName">
+            </div>
+            <div>
+                <label for="">Last name:</label>
+                <input type="text" name="lastName">
+            </div>
+            <div>
+                <label for="">Email name:</label>
+                <input type="email" name="email">
+            </div>
+            <div>
+                <label for="">Address name:</label>
+                <input type="text" name="address">
+            </div>
+            <div class="submit">
+                <button type="submit" class="btn-submit">Submit</button>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
